--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -46,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\Cities\Models\Effects\IEffect.cs" />
+    <Compile Include="Assets\Scripts\Core\IAttackable.cs" />
     <Compile Include="Assets\Scripts\Core\SettingsManager.cs" />
     <Compile Include="Assets\NotSorted\Fantasy Character Pixel Art Pack1\Script\CharacterAnimation.cs" />
     <Compile Include="Assets\Scripts\Core\GameSettingsManager.cs" />
